# cmake-examples

./: .gitignore  README.md
docker/cdash-docker/: Dockerfile
src/Step01-minimal/: CMakeLists.txt  Dockerfile  Dockerfile-builder  makefile
src/Step02-versioned/: CMakeLists.txt  Dockerfile  Dockerfile-builder  makefile  tutorial.cxx  tutorialConfig.h.in
src/Step03-library/: CMakeLists.txt  Dockerfile  Dockerfile-builder  TutorialConfig.h.in  makefile  tutorial.cxx  tutorialConfig.h.in
src/Step03-library/MathFunctions/: MathFunctions.h  mysqrt.cxx
src/Step04-testable/: CMakeLists.txt  Dockerfile  Dockerfile-builder  makefile  tutorial.cxx
src/Step04-testable/MathFunctions/: MathFunctions.h  mysqrt.cxx
src/Step05-Introspection/: CMakeLists.txt  Dockerfile  Dockerfile-builder  TutorialConfig.h.in  makefile
src/Step05-Introspection/MathFunctions/: mysqrt.cxx
src/Step06-generated/: CMakeLists.txt  Dockerfile  Dockerfile-builder  makefile  tutorialConfig.h.in
src/Step07-installable/: CMakeLists.txt  Dockerfile  Dockerfile-builder  makefile
src/Step07-installable/MathFunctions/: CMakeLists.txt  MakeTable.cxx
src/Step08-dashboard/: CMakeLists.txt  CTestConfig.cmake  Dockerfile  Dockerfile-builder  makefile  tutorial.cxx
src/code-clinic/Instrument/solution/: Makefile
src/code-clinic/dashboard/: Dockerfile  Dockerfile-builder  makefile
src/code-clinic/dashboard/solution/Dashboard/: CMakeLists.txt  Dashboard.sln
src/code-clinic/dashboard/solution/Dashboard/Dashboard/: CMakeLists.txt  Dashboard.vcxproj  dashboard.css
src/code-clinic/face-detector/solution/: Makefile
src/code-clinic/geolocation/solution/: GeolocationRequest.hpp  Makefile  Makefile-minimal
src/code-clinic/n-queens/: CMakeLists.txt  Dockerfile  Makefile  Makefile-minimal
src/code-clinic/n-queens/solution/: Dockerfile-builder  Makefile
src/code-clinic/weather-statistics/: Dockerfile-base  Dockerfile-builder  Makefile  WeatherStatisticsMain.cpp  makefile-minimal
src/code-clinic/weather-statistics/solution/: CMakeLists.txt  Dockerfile  Makefile  WeatherStatistics.hpp
src/minimal/: tutorial.cxx
src/testable/: CMakeLists.txt
src/testable/MathFunctions/: mysqrt.cxx
